# mongodb-nosql-airbnb

./: .gitignore  README.md  pyproject.toml
business_intelligence/: README.md
business_intelligence/scripts/: create_views_sharded.mongodb.js  start_mongo_bi.ps1
replicaset/: README.md  docker-compose.yaml
replicaset/scripts/: init-replicaset.mongodb.js  monitoring_script.sh
sharding/: README.md  docker-compose.yml
sharding/scripts/: init-sharding.sh
standalone/: README.md  analysis_queries.mongodb.js  merge_collections.mongodb.js
standalone/notebooks/: analyse.ipynb
standalone/utils/: tools.py
