[project]
name = "projet_7"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdulkadir GUVEN",email = "abguven@yahoo.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "polars (>=1.35.2,<2.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
notebook = "^7.4.7"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
